# port4kMUD

./: .babelrc  .env  .env.local.EXAMPLE  .env.local.example  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  .replit  CONTRIBUTING.md  ChangeLog  DOKKU.md  Dockerfile  FAQ  FEATURES.md  PORTING  Procfile  README  README.OS2  README.WIN  README.md  ZONES.md  autorun  check-email.js  codex.md  configure.in  docker-compose.dev.yml  docker-compose.test.yml  global.d.ts  jest.config.js  jest.setup.js  launch.sh  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-commit
__tests__/: WelcomeCard.test.tsx  auth.test.tsx  navigation.test.tsx
attached_assets/: content-1745380565809.md
e2e/: homepage.spec.ts
lib/etc/: DELETED
lib/text/: imotd  motd
mud/: .gitignore  FEATURES.md  Makefile  Makefile.in  README.md  ZONES.md  configure  configure.in
mud/doc/OLD-DOCS/: comm.doc
mud/lib/text/: motd
mud/lib/text/clan/: normal.clan
mud/lib/text/help/: help.hlp
mud/lib/world/wld/: index
mud/src/: Makefile  Makefile.in  Makefile.os2  Makefile.win  act.comm.c  act.create.c  act.informative.c  act.item.c  act.movement.c  act.other.c  act.social.c  act.wizard.c  clan.c  class.c  comm.c  comm.h  conf.h  conf.h.os2  conf.h.win  db.c  fight.c  handler.c  interpreter.c  limits.c  magic.c  modify.c  sedit.c  shop.c  spec_procs.c  spells.c  sysdep.h  utils.h  utils.ht  zedit.c
mud/src/util/: play2to3.c
pages/: _app.tsx  index.tsx
pages/api/: hello.ts
prisma/: schema.prisma  schema.sqlite.prisma  test.db  test.db-journal
proto/: game.proto  player.proto
scripts/: build-schemas.js  db-clean.js  setup-test-db.js  test-all.sh
server/: .eslintrc.js  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.test.yml  global.d.ts  jest.config.js  package.json  playwright.config.ts  server.ts  tsconfig.server.json
server/__tests__/: auth.test.tsx  navigation.test.tsx
server/e2e/: authentication.spec.ts  homepage.spec.ts  test-cleanup.sh  test-launch.sh
server/pages/: _app.tsx  index.tsx  mud.tsx
server/prisma/: models.prisma
server/scripts/: db-clean.js
server/styles/: global.css  xterm.css
server/types/: socket.io.d.ts
src/: Makefile.in  act.informative.c  act.item.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  ban.c  boards.c  class.c  color.c  comm.c  comm.h  config.c  constants.c  db.c  db.h  db.ts  fight.c  handler.c  handler.h  house.c  interpreter.c  interpreter.h  limits.c  magic.c  mobact.c  modify.c  objsave.c  olc.c  shop.c  shop.h  spell_parser.c  spells.c  structs.h  utils.c  utils.h
styles/: globals.css
tests/: email-auth.spec.ts  navigation.spec.ts
(+25 files in other folders)
