AC_INIT([port4kMUD], [unknown], [your-email@example.com])
AC_CONFIG_SRCDIR([src/act.comm.c])
AC_CONFIG_HEADERS([src/conf.h])

# Checks for programs.
AC_PROG_CC

# Add the gnu89 standard flag for compatibility with older C code
# Check if CFLAGS is already set, otherwise initialize it
: ${CFLAGS=""}
CFLAGS="$CFLAGS -std=gnu89"
AC_SUBST(CFLAGS)

# Checks for header files. (Add more if needed)
AC_CHECK_HEADERS([string.h stdlib.h sys/time.h unistd.h])

# Check for the crypt function and its location
# First check if it's in the standard library
AC_CHECK_FUNC([crypt],
  [AC_DEFINE([HAVE_CRYPT], [1], [Define to 1 if you have the 'crypt' function.])],
  [# If not in standard library, check in -lcrypt
   AC_CHECK_LIB([crypt], [crypt],
     [LIBFILES="-lcrypt"
      AC_DEFINE([HAVE_CRYPT], [1], [Define to 1 if you have the 'crypt' function.])
      AC_DEFINE([CIRCLE_CRYPT], [1], [Define to 1 if the crypt function is declared in unistd.h.])
     ]
   )
  ]
)
AC_SUBST(LIBFILES)

# Checks for typedefs, structures, and compiler characteristics.
# AC_C_CONST (If needed)
# AC_TYPE_SIZE_T (If needed)

# Checks for library functions. (Add more if needed)
# AC_FUNC_MALLOC (If needed)
# AC_CHECK_FUNCS([memset sqrt strdup])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
