AC_INIT([port4kMUD], [unknown], [your-email@example.com])
AC_CONFIG_SRCDIR([src/act.comm.c])
AC_CONFIG_HEADERS([src/conf.h])

# Checks for programs.
AC_PROG_CC

# Add the gnu89 standard flag for compatibility with older C code
# Check if CFLAGS is already set, otherwise initialize it
: ${CFLAGS=""}
CFLAGS="$CFLAGS -std=gnu89"
AC_SUBST(CFLAGS)

# Checks for header files.
AC_CHECK_HEADERS([string.h stdlib.h sys/time.h unistd.h])

# Check for crypt() function, first in libc, then in libcrypt
AC_CHECK_FUNC(crypt, 
  [AC_DEFINE(CIRCLE_CRYPT, 1, [Define if crypt is available])],
  [AC_CHECK_LIB(crypt, crypt,
    [LIBFILES="-lcrypt"
     AC_DEFINE(CIRCLE_CRYPT, 1, [Define if crypt is available in libcrypt])],
    [AC_MSG_WARN([crypt() not found, password encryption disabled])]
  )]
)

# Other necessary glibc compatibility settings
GLIBC=

# Some systems need these defines for proper compilation
AC_CHECK_FUNC(random, 
  [], 
  [GLIBC="$GLIBC -Drandom=random"]
)
AC_CHECK_FUNC(htonl, 
  [], 
  [GLIBC="$GLIBC -Dhtonl=htonl"]
)
AC_CHECK_FUNC(ntohl, 
  [], 
  [GLIBC="$GLIBC -Dntohl=ntohl"]
)

# Make sure these variables get substituted in the Makefile
AC_SUBST(GLIBC)
AC_SUBST(LIBFILES)

# Configure all Makefiles
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
